// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spreadsheet pivot side panel It should correctly be displayed 1`] = `
<div
  class="o-sidePanel h-100 bg-white border-top border-start"
>
  <div
    class="o-sidePanelHeader d-flex align-items-center justify-content-between border-bottom"
  >
    <div
      class="o-collapse-panel o-sidePanelAction rounded"
    >
      <i
        class="o-icon-angle-double-right"
      >
        <svg
          class="o-icon"
          fill="currentColor"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L9.293 8 3.646 2.354a.5.5 0 0 1 0-.708"
            fill-rule="evenodd"
          />
          <path
            d="M7.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L13.293 8 7.646 2.354a.5.5 0 0 1 0-.708"
            fill-rule="evenodd"
          />
        </svg>
      </i>
    </div>
    
    <div
      class="o-sidePanelTitle o-fw-bold ms-2"
    >
      Pivot #1
    </div>
    <div
      class="o-sidePanelHeaderActions flex-grow-1 d-flex justify-content-end align-items-center pe-1"
    />
    
    <div
      class="o-sidePanelClose o-sidePanelAction rounded"
    >
       ✕ 
    </div>
  </div>
  <div
    class="o-sidePanelBody-container d-flex flex-grow-1 "
  >
    <div
      class="o-sidePanel-handle-container"
    >
      <div
        class="o-sidePanel-handle"
      >
        <svg
          class="o-icon"
          fill="currentColor"
          viewBox="0 0 4 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="2"
            cy="3.5"
            r="1"
          />
          <circle
            cx="2"
            cy="6.5"
            r="1"
          />
          <circle
            cx="2"
            cy="9.5"
            r="1"
          />
          <circle
            cx="2"
            cy="12.5"
            r="1"
          />
        </svg>
      </div>
    </div>
    <div
      class="o-sidePanelBody"
    >
      <div
        class="o-pivot-panel d-flex flex-column h-100"
      >
        <div
          class="o-panel d-flex"
        >
          <div
            class="o-sidePanel-tab o-panel-configuration d-flew flex-grow-1 text-center"
          >
            <i
              class="o-icon-sliders me-1"
            >
              <svg
                class="o-icon"
                fill="currentColor"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.5 2a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3M9.05 3a2.5 2.5 0 0 1 4.9 0H16v1h-2.05a2.5 2.5 0 0 1-4.9 0H0V3zM4.5 7a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3M2.05 8a2.5 2.5 0 0 1 4.9 0H16v1H6.95a2.5 2.5 0 0 1-4.9 0H0V8zm9.45 4a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3m-2.45 1a2.5 2.5 0 0 1 4.9 0H16v1h-2.05a2.5 2.5 0 0 1-4.9 0H0v-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </i>
             Configuration 
          </div>
          <div
            class="o-sidePanel-tab o-panel-design d-flew flex-grow-1 text-center inactive"
          >
            <i
              class="o-icon-paint-brush me-1"
            >
              <svg
                class="o-icon"
                fill="currentColor"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.825.12a.5.5 0 0 1 .132.584c-1.53 3.43-4.743 8.17-7.095 10.64a6.1 6.1 0 0 1-2.373 1.534c-.018.227-.06.538-.16.868-.201.659-.667 1.479-1.708 1.74a8.1 8.1 0 0 1-3.078.132 4 4 0 0 1-.562-.135 1.4 1.4 0 0 1-.466-.247.7.7 0 0 1-.204-.288.62.62 0 0 1 .004-.443c.095-.245.316-.38.461-.452.394-.197.625-.453.867-.826.095-.144.184-.297.287-.472l.117-.198c.151-.255.326-.54.546-.848.528-.739 1.201-.925 1.746-.896q.19.012.348.048c.062-.172.142-.38.238-.608.261-.619.658-1.419 1.187-2.069 2.176-2.67 6.18-6.206 9.117-8.104a.5.5 0 0 1 .596.04M4.705 11.912a1.2 1.2 0 0 0-.419-.1c-.246-.013-.573.05-.879.479-.197.275-.355.532-.5.777l-.105.177c-.106.181-.213.362-.32.528a3.4 3.4 0 0 1-.76.861c.69.112 1.736.111 2.657-.12.559-.139.843-.569.993-1.06a3 3 0 0 0 .126-.75zm1.44.026c.12-.04.277-.1.458-.183a5.1 5.1 0 0 0 1.535-1.1c1.9-1.996 4.412-5.57 6.052-8.631-2.59 1.927-5.566 4.66-7.302 6.792-.442.543-.795 1.243-1.042 1.826-.121.288-.214.54-.275.72v.001l.575.575zm-4.973 3.04.007-.005zm3.582-3.043.002.001h-.002z"
                />
              </svg>
            </i>
             Design 
          </div>
        </div>
        <div
          class="o-panel-content overflow-y-auto h-100"
        >
          <div
            class="h-100"
          >
            <div
              class="d-flex flex-column h-100 justify-content-between overflow-hidden"
            >
              <div
                class="h-100 position-relative overflow-x-hidden overflow-y-auto"
              >
                <div>
                  <div
                    class="o-section"
                  >
                    <div
                      class="o-section-title"
                    >
                      
                      <div
                        class="d-flex flex-row justify-content-between align-items-center"
                      >
                         Name 
                        <span
                          class="o-icon-cog os-cog-wheel-menu-icon o-button-icon"
                        >
                          <svg
                            class="o-icon"
                            fill="currentColor"
                            viewBox="0 0 16 16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M8 4.754a3.246 3.246 0 1 0 0 6.492 3.246 3.246 0 0 0 0-6.492M5.754 8a2.246 2.246 0 1 1 4.492 0 2.246 2.246 0 0 1-4.492 0"
                            />
                            <path
                              d="M9.796 1.343c-.527-1.79-3.065-1.79-3.592 0l-.094.319a.873.873 0 0 1-1.255.52l-.292-.16c-1.64-.892-3.433.902-2.54 2.541l.159.292a.873.873 0 0 1-.52 1.255l-.319.094c-1.79.527-1.79 3.065 0 3.592l.319.094a.873.873 0 0 1 .52 1.255l-.16.292c-.892 1.64.901 3.434 2.541 2.54l.292-.159a.873.873 0 0 1 1.255.52l.094.319c.527 1.79 3.065 1.79 3.592 0l.094-.319a.873.873 0 0 1 1.255-.52l.292.16c1.64.893 3.434-.902 2.54-2.541l-.159-.292a.873.873 0 0 1 .52-1.255l.319-.094c1.79-.527 1.79-3.065 0-3.592l-.319-.094a.873.873 0 0 1-.52-1.255l.16-.292c.893-1.64-.902-3.433-2.541-2.54l-.292.159a.873.873 0 0 1-1.255-.52zm-2.633.283c.246-.835 1.428-.835 1.674 0l.094.319a1.873 1.873 0 0 0 2.693 1.115l.291-.16c.764-.415 1.6.42 1.184 1.185l-.159.292a1.873 1.873 0 0 0 1.116 2.692l.318.094c.835.246.835 1.428 0 1.674l-.319.094a1.873 1.873 0 0 0-1.115 2.693l.16.291c.415.764-.42 1.6-1.185 1.184l-.291-.159a1.873 1.873 0 0 0-2.693 1.116l-.094.318c-.246.835-1.428.835-1.674 0l-.094-.319a1.873 1.873 0 0 0-2.692-1.115l-.292.16c-.764.415-1.6-.42-1.184-1.185l.159-.291A1.873 1.873 0 0 0 1.945 8.93l-.319-.094c-.835-.246-.835-1.428 0-1.674l.319-.094A1.873 1.873 0 0 0 3.06 4.377l-.16-.292c-.415-.764.42-1.6 1.185-1.184l.292.159a1.873 1.873 0 0 0 2.692-1.115z"
                            />
                          </svg>
                        </span>
                        
                        
                      </div>
                      
                    </div>
                    
                    <div
                      class="position-relative"
                    >
                      <input
                        class="os-pivot-title w-100 os-input"
                        type="text"
                      />
                      
                    </div>
                    
                  </div>
                  
                  <div
                    class="o-section"
                  >
                    <div
                      class="o-section-title"
                    >
                      Range
                      
                      
                    </div>
                    
                    <div
                      class="o-selection"
                    >
                      <div
                        class="o-selection-input d-flex flex-row"
                      >
                        
                        <div
                          class="position-relative w-100"
                        >
                          <input
                            class="o-input mb-2"
                            placeholder="e.g. A1:A2"
                            spellcheck="false"
                            style=""
                            type="text"
                          />
                          
                          
                        </div>
                        
                      </div>
                      
                      
                      <div
                        class="d-flex flex-row w-100 o-selection-input"
                      >
                        
                        
                      </div>
                    </div>
                    
                    
                  </div>
                  
                  <div
                    class="pivot-dimensions o-section"
                  >
                    <div
                      class="o-fw-bold py-1 d-flex flex-row justify-content-between align-items-center o-section-title"
                    >
                       Columns 
                      <button
                        class="add-dimension o-button"
                      >
                        Add
                      </button>
                      
                      
                    </div>
                    
                    
                    <div
                      class="o-fw-bold pt-4 pb-1 d-flex flex-row justify-content-between align-items-center o-section-title"
                    >
                       Rows 
                      <button
                        class="add-dimension o-button"
                      >
                        Add
                      </button>
                      
                      
                    </div>
                    
                    
                    <div
                      class="o-fw-bold pt-4 pb-1 d-flex flex-row justify-content-between align-items-center o-section-title o-pivot-measure"
                    >
                       Measures 
                      <button
                        class="add-dimension o-button"
                      >
                        Add
                      </button>
                      
                      
                    </div>
                    
                    
                  </div>
                  
                  
                </div>
              </div>
              <div
                class="o-section align-items-center border-top d-flex flex-row justify-content-between py-1 pivot-defer-update"
              >
                
                <label
                  class="o-checkbox d-flex align-items-center"
                  role="button"
                  title="Changing the pivot definition requires to reload the data. It may take some time."
                >
                  <input
                    class="me-2 flex-shrink-0 border"
                    type="checkbox"
                  />
                  <span
                    class="text-truncate"
                  >
                    Defer updates
                  </span>
                  
                </label>
                
                
              </div>
              
            </div>
          </div>
          <div
            class="d-none"
          >
            <div
              class="o-section o-pivot-design"
            >
              <div
                class="o-section-title"
              >
                Display options
                
                
              </div>
              
              <div>
                <div
                  class="container-fluid p-0 pt-2"
                >
                  <div
                    class="row mb-2 align-items-center"
                  >
                    <div
                      class="col-6"
                    >
                      Max rows:
                    </div>
                    <div
                      class="col-6 d-flex align-items-center"
                    >
                      <input
                        class="o-pivot-n-of-rows o-input"
                        placeholder="e.g. 10"
                        type="number"
                      />
                    </div>
                  </div>
                  <div
                    class="row mb-2 align-items-center"
                  >
                    <div
                      class="col-6"
                    >
                      Max columns:
                    </div>
                    <div
                      class="col-6 d-flex align-items-center"
                    >
                      <input
                        class="o-pivot-n-of-columns o-input"
                        placeholder="e.g. 5"
                        type="number"
                      />
                    </div>
                  </div>
                  <div
                    class="row mb-2 align-items-center"
                  >
                    <div
                      class="col-6"
                    >
                      Show totals:
                    </div>
                    <div
                      class="col-6 d-flex align-items-center"
                    >
                      <label
                        class="o-checkbox d-flex align-items-center"
                        role="button"
                      >
                        <input
                          class="me-2 flex-shrink-0 border"
                          name="displayTotals"
                          type="checkbox"
                        />
                        
                      </label>
                    </div>
                  </div>
                  <div
                    class="row mb-2 align-items-center"
                  >
                    <div
                      class="col-6"
                    >
                      Show column titles:
                    </div>
                    <div
                      class="col-6 d-flex align-items-center"
                    >
                      <label
                        class="o-checkbox d-flex align-items-center"
                        role="button"
                      >
                        <input
                          class="me-2 flex-shrink-0 border"
                          name="displayColumnHeaders"
                          type="checkbox"
                        />
                        
                      </label>
                    </div>
                  </div>
                  <div
                    class="row mb-2 align-items-center"
                  >
                    <div
                      class="col-6"
                    >
                      Show measure titles:
                    </div>
                    <div
                      class="col-6 d-flex align-items-center"
                    >
                      <label
                        class="o-checkbox d-flex align-items-center"
                        role="button"
                      >
                        <input
                          class="me-2 flex-shrink-0 border"
                          name="displayMeasuresRow"
                          type="checkbox"
                        />
                        
                      </label>
                    </div>
                  </div>
                </div>
              </div>
              
            </div>
            <div
              class="o-section o-pivot-table-style"
            >
              <div
                class="o-section-title"
              >
                Pivot table style
                
                
              </div>
              
              <div
                class="row mb-2 align-items-center pt-2"
              >
                <div
                  class="col-6"
                >
                  Banded rows:
                </div>
                <div
                  class="col-6 d-flex align-items-center"
                >
                  <label
                    class="o-checkbox d-flex align-items-center"
                    role="button"
                  >
                    <input
                      class="me-2 flex-shrink-0 border"
                      name="bandedRows"
                      type="checkbox"
                    />
                    
                  </label>
                </div>
              </div>
              <div
                class="row mb-2 align-items-center"
              >
                <div
                  class="col-6"
                >
                  Banded columns
                </div>
                <div
                  class="col-6 d-flex align-items-center"
                >
                  <label
                    class="o-checkbox d-flex align-items-center"
                    role="button"
                  >
                    <input
                      class="me-2 flex-shrink-0 border"
                      name="bandedColumns"
                      type="checkbox"
                    />
                    
                  </label>
                </div>
              </div>
              <div
                class="row mb-2 align-items-center"
              >
                <div
                  class="col-6"
                >
                  Filter button
                </div>
                <div
                  class="col-6 d-flex align-items-center"
                >
                  <label
                    class="o-checkbox d-flex align-items-center"
                    role="button"
                  >
                    <input
                      class="me-2 flex-shrink-0 border"
                      name="hasFilters"
                      type="checkbox"
                    />
                    
                  </label>
                </div>
              </div>
              <div
                class="mt-4"
              >
                <div
                  class="o-table-style-picker d-flex flew-row justify-content-between ps-1 border rounded"
                >
                  <div
                    class="d-flex flex-row overflow-hidden o-pivot-previews"
                  >
                    <div
                      class="o-table-style-list-item position-relative selected"
                      data-id="None"
                      title="None"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight1"
                      title="Light Black 1"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight2"
                      title="Light Blue 2"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight3"
                      title="Light Red 3"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight4"
                      title="Light Green 4"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight5"
                      title="Light Purple 5"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight6"
                      title="Light Gray 6"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight7"
                      title="Light Orange 7"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight8"
                      title="Light Black 8"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight9"
                      title="Light Blue 9"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight10"
                      title="Light Red 10"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight11"
                      title="Light Green 11"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight12"
                      title="Light Purple 12"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight13"
                      title="Light Gray 13"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight14"
                      title="Light Orange 14"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight15"
                      title="Light Black 15"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight16"
                      title="Light Blue 16"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight17"
                      title="Light Red 17"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight18"
                      title="Light Green 18"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight19"
                      title="Light Purple 19"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight20"
                      title="Light Gray 20"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight21"
                      title="Light Orange 21"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight22"
                      title="Light Black 22"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight23"
                      title="Light Blue 23"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight24"
                      title="Light Red 24"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight25"
                      title="Light Green 25"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight26"
                      title="Light Purple 26"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight27"
                      title="Light Gray 27"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight28"
                      title="Light Orange 28"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    
                  </div>
                  <div
                    class="o-table-style-picker-arrow d-flex align-items-center px-1 border-start"
                  >
                    <svg
                      class="o-icon"
                      fill="currentColor"
                      style="width:10px;margin-left:3px"
                      viewBox="0 0 16 16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"
                      />
                    </svg>
                  </div>
                </div>
                
              </div>
              
            </div>
          </div>
        </div>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Spreadsheet pivot side panel It should display only the selection input when the dataSet is not valid 1`] = `
<div
  class="o-sidePanel h-100 bg-white border-top border-start"
>
  <div
    class="o-sidePanelHeader d-flex align-items-center justify-content-between border-bottom"
  >
    <div
      class="o-collapse-panel o-sidePanelAction rounded"
    >
      <i
        class="o-icon-angle-double-right"
      >
        <svg
          class="o-icon"
          fill="currentColor"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L9.293 8 3.646 2.354a.5.5 0 0 1 0-.708"
            fill-rule="evenodd"
          />
          <path
            d="M7.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L13.293 8 7.646 2.354a.5.5 0 0 1 0-.708"
            fill-rule="evenodd"
          />
        </svg>
      </i>
    </div>
    
    <div
      class="o-sidePanelTitle o-fw-bold ms-2"
    >
      Pivot #1
    </div>
    <div
      class="o-sidePanelHeaderActions flex-grow-1 d-flex justify-content-end align-items-center pe-1"
    />
    
    <div
      class="o-sidePanelClose o-sidePanelAction rounded"
    >
       ✕ 
    </div>
  </div>
  <div
    class="o-sidePanelBody-container d-flex flex-grow-1 "
  >
    <div
      class="o-sidePanel-handle-container"
    >
      <div
        class="o-sidePanel-handle"
      >
        <svg
          class="o-icon"
          fill="currentColor"
          viewBox="0 0 4 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="2"
            cy="3.5"
            r="1"
          />
          <circle
            cx="2"
            cy="6.5"
            r="1"
          />
          <circle
            cx="2"
            cy="9.5"
            r="1"
          />
          <circle
            cx="2"
            cy="12.5"
            r="1"
          />
        </svg>
      </div>
    </div>
    <div
      class="o-sidePanelBody"
    >
      <div
        class="o-pivot-panel d-flex flex-column h-100"
      >
        <div
          class="o-panel d-flex"
        >
          <div
            class="o-sidePanel-tab o-panel-configuration d-flew flex-grow-1 text-center"
          >
            <i
              class="o-icon-sliders me-1"
            >
              <svg
                class="o-icon"
                fill="currentColor"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.5 2a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3M9.05 3a2.5 2.5 0 0 1 4.9 0H16v1h-2.05a2.5 2.5 0 0 1-4.9 0H0V3zM4.5 7a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3M2.05 8a2.5 2.5 0 0 1 4.9 0H16v1H6.95a2.5 2.5 0 0 1-4.9 0H0V8zm9.45 4a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3m-2.45 1a2.5 2.5 0 0 1 4.9 0H16v1h-2.05a2.5 2.5 0 0 1-4.9 0H0v-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </i>
             Configuration 
          </div>
          <div
            class="o-sidePanel-tab o-panel-design d-flew flex-grow-1 text-center inactive"
          >
            <i
              class="o-icon-paint-brush me-1"
            >
              <svg
                class="o-icon"
                fill="currentColor"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.825.12a.5.5 0 0 1 .132.584c-1.53 3.43-4.743 8.17-7.095 10.64a6.1 6.1 0 0 1-2.373 1.534c-.018.227-.06.538-.16.868-.201.659-.667 1.479-1.708 1.74a8.1 8.1 0 0 1-3.078.132 4 4 0 0 1-.562-.135 1.4 1.4 0 0 1-.466-.247.7.7 0 0 1-.204-.288.62.62 0 0 1 .004-.443c.095-.245.316-.38.461-.452.394-.197.625-.453.867-.826.095-.144.184-.297.287-.472l.117-.198c.151-.255.326-.54.546-.848.528-.739 1.201-.925 1.746-.896q.19.012.348.048c.062-.172.142-.38.238-.608.261-.619.658-1.419 1.187-2.069 2.176-2.67 6.18-6.206 9.117-8.104a.5.5 0 0 1 .596.04M4.705 11.912a1.2 1.2 0 0 0-.419-.1c-.246-.013-.573.05-.879.479-.197.275-.355.532-.5.777l-.105.177c-.106.181-.213.362-.32.528a3.4 3.4 0 0 1-.76.861c.69.112 1.736.111 2.657-.12.559-.139.843-.569.993-1.06a3 3 0 0 0 .126-.75zm1.44.026c.12-.04.277-.1.458-.183a5.1 5.1 0 0 0 1.535-1.1c1.9-1.996 4.412-5.57 6.052-8.631-2.59 1.927-5.566 4.66-7.302 6.792-.442.543-.795 1.243-1.042 1.826-.121.288-.214.54-.275.72v.001l.575.575zm-4.973 3.04.007-.005zm3.582-3.043.002.001h-.002z"
                />
              </svg>
            </i>
             Design 
          </div>
        </div>
        <div
          class="o-panel-content overflow-y-auto h-100"
        >
          <div
            class="h-100"
          >
            <div
              class="d-flex flex-column h-100 justify-content-between overflow-hidden"
            >
              <div
                class="h-100 position-relative overflow-x-hidden overflow-y-auto"
              >
                <div>
                  <div
                    class="o-section"
                  >
                    <div
                      class="o-section-title"
                    >
                      
                      <div
                        class="d-flex flex-row justify-content-between align-items-center"
                      >
                         Name 
                        <span
                          class="o-icon-cog os-cog-wheel-menu-icon o-button-icon"
                        >
                          <svg
                            class="o-icon"
                            fill="currentColor"
                            viewBox="0 0 16 16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M8 4.754a3.246 3.246 0 1 0 0 6.492 3.246 3.246 0 0 0 0-6.492M5.754 8a2.246 2.246 0 1 1 4.492 0 2.246 2.246 0 0 1-4.492 0"
                            />
                            <path
                              d="M9.796 1.343c-.527-1.79-3.065-1.79-3.592 0l-.094.319a.873.873 0 0 1-1.255.52l-.292-.16c-1.64-.892-3.433.902-2.54 2.541l.159.292a.873.873 0 0 1-.52 1.255l-.319.094c-1.79.527-1.79 3.065 0 3.592l.319.094a.873.873 0 0 1 .52 1.255l-.16.292c-.892 1.64.901 3.434 2.541 2.54l.292-.159a.873.873 0 0 1 1.255.52l.094.319c.527 1.79 3.065 1.79 3.592 0l.094-.319a.873.873 0 0 1 1.255-.52l.292.16c1.64.893 3.434-.902 2.54-2.541l-.159-.292a.873.873 0 0 1 .52-1.255l.319-.094c1.79-.527 1.79-3.065 0-3.592l-.319-.094a.873.873 0 0 1-.52-1.255l.16-.292c.893-1.64-.902-3.433-2.541-2.54l-.292.159a.873.873 0 0 1-1.255-.52zm-2.633.283c.246-.835 1.428-.835 1.674 0l.094.319a1.873 1.873 0 0 0 2.693 1.115l.291-.16c.764-.415 1.6.42 1.184 1.185l-.159.292a1.873 1.873 0 0 0 1.116 2.692l.318.094c.835.246.835 1.428 0 1.674l-.319.094a1.873 1.873 0 0 0-1.115 2.693l.16.291c.415.764-.42 1.6-1.185 1.184l-.291-.159a1.873 1.873 0 0 0-2.693 1.116l-.094.318c-.246.835-1.428.835-1.674 0l-.094-.319a1.873 1.873 0 0 0-2.692-1.115l-.292.16c-.764.415-1.6-.42-1.184-1.185l.159-.291A1.873 1.873 0 0 0 1.945 8.93l-.319-.094c-.835-.246-.835-1.428 0-1.674l.319-.094A1.873 1.873 0 0 0 3.06 4.377l-.16-.292c-.415-.764.42-1.6 1.185-1.184l.292.159a1.873 1.873 0 0 0 2.692-1.115z"
                            />
                          </svg>
                        </span>
                        
                        
                      </div>
                      
                    </div>
                    
                    <div
                      class="position-relative"
                    >
                      <input
                        class="os-pivot-title w-100 os-input"
                        type="text"
                      />
                      
                    </div>
                    
                  </div>
                  
                  <div
                    class="o-section"
                  >
                    <div
                      class="o-section-title"
                    >
                      Range
                      
                      
                    </div>
                    
                    <div
                      class="o-selection"
                    >
                      <div
                        class="o-selection-input d-flex flex-row"
                      >
                        
                        <div
                          class="position-relative w-100"
                        >
                          <input
                            class="o-input mb-2 o-focused o-invalid border-danger position-relative"
                            placeholder="e.g. A1:A2"
                            spellcheck="false"
                            style=""
                            type="text"
                          />
                          <span
                            class="input-icon text-danger position-absolute d-flex align-items-center"
                            title="This range is invalid"
                          >
                            <div
                              class="o-icon o-icon-exclamation-circle"
                            >
                              <svg
                                class="o-icon"
                                fill="currentColor"
                                viewBox="0 0 16 16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"
                                />
                                <path
                                  d="M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0M7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0z"
                                />
                              </svg>
                            </div>
                          </span>
                          
                          
                        </div>
                        
                      </div>
                      
                      
                      <div
                        class="d-flex flex-row w-100 o-selection-input"
                      >
                        
                        <div
                          class="ms-auto"
                        >
                          <button
                            class="o-button o-selection-ko"
                          >
                             Reset 
                          </button>
                          
                          <button
                            class="o-button primary ms-2 o-selection-ok"
                          >
                             Confirm 
                          </button>
                          
                        </div>
                        
                      </div>
                    </div>
                    <span
                      class="text-danger sp_range_error_message"
                    >
                      The pivot cannot be created because the dataset is missing.
                    </span>
                    
                  </div>
                  
                  
                </div>
              </div>
              <div
                class="o-section align-items-center border-top d-flex flex-row justify-content-between py-1 pivot-defer-update"
              >
                
                <label
                  class="o-checkbox d-flex align-items-center"
                  role="button"
                  title="Changing the pivot definition requires to reload the data. It may take some time."
                >
                  <input
                    class="me-2 flex-shrink-0 border"
                    type="checkbox"
                  />
                  <span
                    class="text-truncate"
                  >
                    Defer updates
                  </span>
                  
                </label>
                
                
              </div>
              
            </div>
          </div>
          <div
            class="d-none"
          >
            <div
              class="o-section o-pivot-design"
            >
              <div
                class="o-section-title"
              >
                Display options
                
                
              </div>
              
              <div>
                <div
                  class="container-fluid p-0 pt-2"
                >
                  <div
                    class="row mb-2 align-items-center"
                  >
                    <div
                      class="col-6"
                    >
                      Max rows:
                    </div>
                    <div
                      class="col-6 d-flex align-items-center"
                    >
                      <input
                        class="o-pivot-n-of-rows o-input"
                        placeholder="e.g. 10"
                        type="number"
                      />
                    </div>
                  </div>
                  <div
                    class="row mb-2 align-items-center"
                  >
                    <div
                      class="col-6"
                    >
                      Max columns:
                    </div>
                    <div
                      class="col-6 d-flex align-items-center"
                    >
                      <input
                        class="o-pivot-n-of-columns o-input"
                        placeholder="e.g. 5"
                        type="number"
                      />
                    </div>
                  </div>
                  <div
                    class="row mb-2 align-items-center"
                  >
                    <div
                      class="col-6"
                    >
                      Show totals:
                    </div>
                    <div
                      class="col-6 d-flex align-items-center"
                    >
                      <label
                        class="o-checkbox d-flex align-items-center"
                        role="button"
                      >
                        <input
                          class="me-2 flex-shrink-0 border"
                          name="displayTotals"
                          type="checkbox"
                        />
                        
                      </label>
                    </div>
                  </div>
                  <div
                    class="row mb-2 align-items-center"
                  >
                    <div
                      class="col-6"
                    >
                      Show column titles:
                    </div>
                    <div
                      class="col-6 d-flex align-items-center"
                    >
                      <label
                        class="o-checkbox d-flex align-items-center"
                        role="button"
                      >
                        <input
                          class="me-2 flex-shrink-0 border"
                          name="displayColumnHeaders"
                          type="checkbox"
                        />
                        
                      </label>
                    </div>
                  </div>
                  <div
                    class="row mb-2 align-items-center"
                  >
                    <div
                      class="col-6"
                    >
                      Show measure titles:
                    </div>
                    <div
                      class="col-6 d-flex align-items-center"
                    >
                      <label
                        class="o-checkbox d-flex align-items-center"
                        role="button"
                      >
                        <input
                          class="me-2 flex-shrink-0 border"
                          name="displayMeasuresRow"
                          type="checkbox"
                        />
                        
                      </label>
                    </div>
                  </div>
                </div>
              </div>
              
            </div>
            <div
              class="o-section o-pivot-table-style"
            >
              <div
                class="o-section-title"
              >
                Pivot table style
                
                
              </div>
              
              <div
                class="row mb-2 align-items-center pt-2"
              >
                <div
                  class="col-6"
                >
                  Banded rows:
                </div>
                <div
                  class="col-6 d-flex align-items-center"
                >
                  <label
                    class="o-checkbox d-flex align-items-center"
                    role="button"
                  >
                    <input
                      class="me-2 flex-shrink-0 border"
                      name="bandedRows"
                      type="checkbox"
                    />
                    
                  </label>
                </div>
              </div>
              <div
                class="row mb-2 align-items-center"
              >
                <div
                  class="col-6"
                >
                  Banded columns
                </div>
                <div
                  class="col-6 d-flex align-items-center"
                >
                  <label
                    class="o-checkbox d-flex align-items-center"
                    role="button"
                  >
                    <input
                      class="me-2 flex-shrink-0 border"
                      name="bandedColumns"
                      type="checkbox"
                    />
                    
                  </label>
                </div>
              </div>
              <div
                class="row mb-2 align-items-center"
              >
                <div
                  class="col-6"
                >
                  Filter button
                </div>
                <div
                  class="col-6 d-flex align-items-center"
                >
                  <label
                    class="o-checkbox d-flex align-items-center"
                    role="button"
                  >
                    <input
                      class="me-2 flex-shrink-0 border"
                      name="hasFilters"
                      type="checkbox"
                    />
                    
                  </label>
                </div>
              </div>
              <div
                class="mt-4"
              >
                <div
                  class="o-table-style-picker d-flex flew-row justify-content-between ps-1 border rounded"
                >
                  <div
                    class="d-flex flex-row overflow-hidden o-pivot-previews"
                  >
                    <div
                      class="o-table-style-list-item position-relative selected"
                      data-id="None"
                      title="None"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight1"
                      title="Light Black 1"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight2"
                      title="Light Blue 2"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight3"
                      title="Light Red 3"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight4"
                      title="Light Green 4"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight5"
                      title="Light Purple 5"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight6"
                      title="Light Gray 6"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight7"
                      title="Light Orange 7"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight8"
                      title="Light Black 8"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight9"
                      title="Light Blue 9"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight10"
                      title="Light Red 10"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight11"
                      title="Light Green 11"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight12"
                      title="Light Purple 12"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight13"
                      title="Light Gray 13"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight14"
                      title="Light Orange 14"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight15"
                      title="Light Black 15"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight16"
                      title="Light Blue 16"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight17"
                      title="Light Red 17"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight18"
                      title="Light Green 18"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight19"
                      title="Light Purple 19"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight20"
                      title="Light Gray 20"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight21"
                      title="Light Orange 21"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight22"
                      title="Light Black 22"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight23"
                      title="Light Blue 23"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight24"
                      title="Light Red 24"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight25"
                      title="Light Green 25"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight26"
                      title="Light Purple 26"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight27"
                      title="Light Gray 27"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    <div
                      class="o-table-style-list-item position-relative"
                      data-id="PivotTableStyleLight28"
                      title="Light Orange 28"
                    >
                      <div
                        class="o-table-preview"
                      >
                        <canvas
                          class="w-100 h-100"
                        />
                      </div>
                      
                    </div>
                    
                    
                  </div>
                  <div
                    class="o-table-style-picker-arrow d-flex align-items-center px-1 border-start"
                  >
                    <svg
                      class="o-icon"
                      fill="currentColor"
                      style="width:10px;margin-left:3px"
                      viewBox="0 0 16 16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"
                      />
                    </svg>
                  </div>
                </div>
                
              </div>
              
            </div>
          </div>
        </div>
      </div>
    </div>
    
  </div>
</div>
`;
